--- a/Unreal/CarlaUE4/CarlaUE4.uproject
+++ b/Unreal/CarlaUE4/CarlaUE4.uproject
@@ -93,11 +93,25 @@
 			"Enabled": false
 		},
 		{
-			"Name": "SteamVR",
-			"Enabled": false
+			"Name": "RenderDocPlugin",
+			"Enabled": true
 		},
 		{
-			"Name": "RenderDocPlugin",
+			"Name": "Text3D",
+			"Enabled": true
+		},
+		{
+			"Name": "EasyFileDialog",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/bcf64fe2e00c48189d8385a9c39b6e61"
+		},
+		{
+			"Name": "FileSystemLibrary",
+			"Enabled": true,
+			"MarketplaceURL": "https://www.unrealengine.com/marketplace/en-US/product/c8061306eb9b4518ad9183e8a27bee04"
+		},
+		{
+			"Name": "Takes",
 			"Enabled": true
 		}
 	]
