--- a/Unreal/CarlaUE4/Config/DefaultEngineCarla.ini
+++ b/Unreal/CarlaUE4/Config/DefaultEngineCarla.ini
@@ -1,12 +1,11 @@
 [/Script/Engine.Engine]
 bSmoothFrameRate=True
-SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=90.000000),UpperBound=(Type=Exclusive,Value=100.000000))
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=40.000000),UpperBound=(Type=Exclusive,Value=100.000000))
 MaximumLoopIterationCount=1000000000
 bUseFixedFrameRate=False
 FixedFrameRate=90.000000
 DefaultTimecodeFrameRate=(Numerator=30,Denominator=1)
 MinDesiredFrameRate=90.000000
-PreviewShadowsIndicatorMaterialName=/Engine/EditorMaterials/PreviewShadowIndicatorMaterial.PreviewShadowIndicatorMaterial
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -15,13 +14,13 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Carla/Maps/Town10HD_VR.Town10HD_VR
-GameDefaultMap=/Game/Carla/Maps/Town10HD_VR.Town10HD_VR
+EditorStartupMap=/Game/Carla/Maps/RandomLevel.RandomLevel
+GameDefaultMap=/Game/Carla/Maps/RandomLevel.RandomLevel
 ServerDefaultMap=/Game/Carla/Maps/Town03.Town03
-GlobalDefaultGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode_mod.CarlaGameMode_mod_C
+GlobalDefaultGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode.CarlaGameMode_C
 GameInstanceClass=/Script/Carla.CarlaGameInstance
 TransitionMap=/Game/Carla/Maps/Town03.Town03
-GlobalDefaultServerGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode_mod.CarlaGameMode_mod_C
+GlobalDefaultServerGameMode=/Game/Carla/Blueprints/Game/CarlaGameMode.CarlaGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.MotionBlur=False
@@ -42,7 +41,6 @@ r.DistanceFields.AtlasSizeZ=2048
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AntiAliasing=2
 r.SupportPointLightWholeSceneShadows=True
-r.Shadow.UnbuiltPreviewInGame=True
 
 [/Script/AIModule.AISense_Sight]
 bAutoRegisterAllPawnsAsSources=False
@@ -118,7 +116,3 @@ DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 FrameRateLock=PUFRL_None
-
-[/Script/SRanipal.SRanipalSettings]
-EnableEyeByDefault=True
-
